syntax="proto3";

package teksteamclient.manifest;
option csharp_namespace = "TEKSteamClient.Manifest";

message Patch
{
	message Chunk
	{
		bytes source_gid = 1;
		bytes target_gid = 2;
		optional bytes data = 5;
		optional int32 data_size = 6;
	}
	repeated Chunk chunks = 4;
	bool data_after_proto = 5;
}